# Computer_Hardware_Marketplace

./: Makefile  README.md  README.rst  pyproject.toml
vidago/: db.sqlite3  manage.py  requirements.txt
vidago/conversation/: urls.py  views.py
vidago/conversation/migrations/: 0001_initial.py
vidago/core/: urls.py  views.py
vidago/core/templates/core/: base.html  contact.html  index.html
vidago/dashboard/: urls.py  views.py
vidago/item/: models.py
vidago/item/migrations/: 0001_initial.py  0002_alter_category_options_item.py  0003_alter_item_images.py  0004_alter_item_images.py  0005_rename_images_item_image.py
vidago/item/templates/item/: details.html  items.html
vidago/vidago/: asgi.py  settings.py  urls.py  wsgi.py
