[project]
name = "computer-hardware-marketplace"
version = "0.1.0"
description = "A Hardware Computer Marketplace built with Django"
authors = [
    {name = "ezemiller",email = "onejemechibueze@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
